# CC-232

./: Guia_curso_CC232.md
Libreria_cc232/Semana2/: actividad2.md
Libreria_cc232/Semana3/: actividad3.md
Libreria_cc232/Semana4/: actividad4.md
Libreria_cc232/Semana5/: Resumen_Semana5.md  actividad5.md
Libreria_cc232/Semana6/: actividad6.md
Libreria_cc232/Semana6/include/: Huffman_PQ.h  PQ_ComplHeap.h  PQ_ComplHeap_macro.h  PQ_ComplHeap_percolateDown.h  PQ_ComplHeap_percolateUp.h  PQ_LeftHeap.h  Treap.h  vector_heapSort.h
Libreria_cc232/Semana6/lecturas/: Lectura11-Morin.md
Libreria_cc232/Semana7/: CMakeLists.txt  Resumen_Semana7.md  actividad7.md
Libreria_cc232/Semana7/demos/: demo_invariant_trace_week7.cpp  demo_search_benchmark_week7.cpp
Libreria_cc232/Semana7/lecturas/: Lectura13-CC232.md
Libreria_cc232/Semana7/pruebas_publicas/: test_public_week7_extra.cpp
Libreria_cc232/Semana8/: Actividad8-CC232.md  Ejercicios8-CC232.md  actividad8.md
Libreria_cc232/Semana8/demos/: demo_benchmark_load_factor.cpp
Libreria_cc232/Semana8/include/: HashStats.h
Practicas/Practica3_CC232/: Indicaciones.md
Practicas/practica-calificada3/: .gitignore  CMakeLists.txt  README.md
Practicas/practica-calificada3/docs/: bitacora.md  respuestas_obligatorias.md
Practicas/practica-calificada3/include/: IntervalTreap.h
Practicas/practica-calificada3/resultados/: casos_borde.txt  ejecucion_pc3.txt  tests_pc3.txt
Practicas/practica-calificada3/src/: main.cpp
Semana0/: Ejercicios0.md  resolver_ejercicios0_v4.2.sh
Semana0/Proyecto0/: .gitignore
(+6 files in other folders)
